# GWLocalServer

./: CMakeLists.txt  README.md
dep/lib/WIN32/: libevent_core.lib  libevent_core_d.lib  libevent_extras.lib  libevent_extras_d.lib
dep/src/libevent/: Makefile.nmake  _make_VC-WIN32.bat  _make_linux_i386.sh
dep/src/libevent/test/: Makefile.nmake
src/: CMakeLists.txt  GWLocalServer.cpp
